Saved dependencies and lock file.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "tests",
-  "version": "1.0.0",
+  "name": "Vanguard Server",
+  "version": "0.0.1",
   "description": "",
-  "main": "test.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vanguard-io/Daemon.git"
+    "url": "git+https://github.com/vanguard-io/Server.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vanguard-io/Daemon/issues"
+    "url": "https://github.com/vanguard-io/Server/issues"
   },
-  "homepage": "https://github.com/vanguard-io/Daemon#readme"
+  "homepage": "https://github.com/vanguard-io/Server#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.0",
+    "mongoose": "^5.5.9"
+  }
 }
